--- a/api/Dockerfile.test
+++ b/api/Dockerfile.test
@@ -1,9 +1,9 @@
-FROM node:7-alpine
+FROM node:8.10-alpine
 
 WORKDIR /usr/src/app
 
 ENV NODE_ENV=test
-COPY package.json .
+COPY package.json package-lock.json ./
 RUN npm install
 COPY . .
 
