--- a/api/package.json
+++ b/api/package.json
@@ -6,12 +6,13 @@
   "main": "index.js",
   "scripts": {
     "start": "node index",
-    "test": "mocha --harmony-async-await '**/*.spec.js'",
+    "test": "mocha '**/*.spec.js'",
     "standard": "standard --env mocha --fix"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
     "cors": "^2.8.1",
+    "dotenv": "^5.0.1",
     "express": "^4.14.0",
     "express-validator": "^3.1.2",
     "log4js": "^0.6.38",
